Updated Part 4 of panama4newbies to use the latest Java 25 with jeps 454,467,512 and jextract.